test/spec_vectors/simd_bit_shift/fail/module_11.wat
(module (func (result v128) (i64x2.shl (i32.const 0) (i32.const 0))))